--- a/build.gradle
+++ b/build.gradle
@@ -22,3 +22,7 @@ dependencies {
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.0'
     compile group: 'com.aventstack', name: 'extentreports-testng-adapter', version: '1.0.3'
 }
+
+test {
+    useTestNG()
+}
